<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/layout_padding"
    tools:context=".SearchBreeds">

    <EditText
        android:id="@+id/etBreed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_breed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnSubmit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/psans_regular"
            android:text="@string/submit" />

        <Button
            android:id="@+id/btnStop"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:fontFamily="@font/psans_regular"
            android:text="@string/stop" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivDog"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop" />

</LinearLayout>