<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyBreeds">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding"
        tools:context=".IdentifyBreeds">

        <TextView
            android:id="@+id/tvCountdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_margin_bottom"
            android:fontFamily="@font/psans_bold"
            android:text="@string/seconds_remaining"
            android:textSize="@dimen/large_text" />

        <ImageView
            android:id="@+id/ivBreed"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/element_margin_bottom"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_margin_bottom"
            android:fontFamily="@font/psans_regular"
            android:text="@string/choose_breed"
            android:textSize="@dimen/small_text" />


        <Spinner
            android:id="@+id/spDogBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_margin_bottom"></Spinner>

        <Button
            android:id="@+id/btnSubmit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_margin_bottom"
            android:fontFamily="@font/psans_regular"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/tvAnswerState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/psans_bold"
            android:text="Wrong Answer!!!"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvCorrectAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/psans_bold"
            android:text="Correct answer"
            android:textColor="@color/colorBlue"
            android:textSize="17sp" />

    </LinearLayout>

</ScrollView>